--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "todo"
+archivesBaseName = "to-do"
 version = '1.0'
 mainClassName = "App"
 
@@ -11,9 +11,8 @@ repositories {
 
 dependencies {
   compile group: 'com.sparkjava', name: 'spark-core', version: '2.3'
-  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
   testCompile group: 'junit', name: 'junit', version: '4.+'
-
+  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
   compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
   compile group: 'org.postgresql', name: 'postgresql', version: "9.4-1201-jdbc41"
 }
